--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,10 +39,10 @@ dependencies:
         sdk: flutter
 
     google_maps_flutter: ^2.5.0
-    form_builder_extra_fields: ^10.1.0
+    form_builder_extra_fields: any
     flutter_typeahead: ^4.8.0
     google_maps_webapi: ^0.0.22
-    geolocator: ^10.1.0
+    geolocator: ^14.0.1
     http: ^1.1.0
     logger: ^2.0.2+1
 
